# agm-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
docs/: architecture.md  backends.md  data-model.md  json-contracts.md  pipeline.md  protocol.md
schemas/: ApplyPatchApprovalResponse.json  ClientRequest.json  CommandExecutionRequestApprovalParams.json  CommandExecutionRequestApprovalResponse.json  EventMsg.json  ExecCommandApprovalResponse.json  ServerNotification.json  ServerRequest.json  SkillRequestApprovalParams.json  SkillRequestApprovalResponse.json  codex_app_server_protocol.schemas.json
schemas/v2/: ConfigReadResponse.json  ConfigRequirementsReadResponse.json  ItemCompletedNotification.json  ItemStartedNotification.json  ReviewStartResponse.json  ThreadForkParams.json  ThreadForkResponse.json  ThreadListResponse.json  ThreadReadResponse.json  ThreadResumeParams.json  (+10 more)
scripts/: generate_command_ref.py  post-merge.sh
tests/: _fake_mcp_server.py  conftest.py  test_agents_config.py  test_api.py  test_backends.py  test_callers.py  test_cli.py  test_client.py  test_codex_home.py  test_concurrent.py  test_coordinator.py  test_daemon.py  test_daemon_cli.py  test_daemon_wiring.py  test_db.py  test_display.py  test_doctor.py  test_event_forwarding.py  test_events.py  test_git_ops.py  test_mcp_pool.py  test_plans.py  test_protocol_schema.py  test_queries.py  test_queue.py  test_reviewer_diff.py  test_settings.py  test_setup.py  test_tasks.py  test_tool_config.py  test_tool_handler.py  test_tracing.py
(+37 files in other folders)
