[project]
name = "agm"
version = "0.1.0"
description = "CLI that orchestrates AI agents through a fully automated pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "mcp>=1.9",
    "redis>=5.0",
    "rq>=2.6.1",
]

[project.scripts]
agm = "agm.cli:main"
agm-api = "agm.api:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jsonschema>=4.20",
    "pyright>=1.1.408",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-n auto"
markers = [
    "slow: manually-curated marker for expensive/integration-heavy tests; fast gate is '-m \"not slow\"' and marker usage must be reviewed periodically",
]
